--- a/notes.org
+++ b/notes.org
@@ -207,42 +207,43 @@ A single bit cannot be expanded into a bus with any built in language feature. H
 A circuit can have multiple outputs, and the outputs can be specific bits from an output bus: ~Not16(in=a, out=b, out[0]=c, out[1..4]=d);~
 * Circuits
 ** Chapter 1
-- Nand(a= ,b= ,out=);
-- Not(in= ,out=);
-- Not16(in= ,out=);
-- And(a= ,b= ,out=);
-- And16(a= ,b= ,out=);
-- Or(a= ,b= ,out=);
-- Or16(a= ,b= ,out=);
-- Or8Way(in= ,out=);
-- Xor(a= ,b= ,out=);
-- Mux(a= ,b= ,sel= ,out=);
-- Mux16(a= ,b= ,sel= ,out=);
-- Mux4Way16(a= ,b= ,c= ,d= ,sel= ,out=);
-- Mux8Way16(a= ,b= ,c= ,d= ,e= ,f= ,g= ,h= ,sel= ,out=);
-- DMux(in= ,sel= ,a= ,b=);
-- DMux4Way(in= ,sel= ,a= ,b= ,c= ,d=);
-- DMux8Way(in= ,sel= ,a= ,b= ,c= ,d= ,e= ,f= ,g= ,h=);
+- Nand(a=, b=, out=);
+- Not(in=, out=);
+- Not16(in=, out=);
+- And(a=, b=, out=);
+- And16(a=, b=, out=);
+- Or(a=, b=, out=);
+- Or16(a=, b=, out=);
+- Or8Way(in=, out=);
+- Xor(a=, b=, out=);
+- Mux(a=, b=, sel=, out=);
+- Mux16(a=, b=, sel=, out=);
+- Mux4Way16(a=, b=, c=, d=, sel=, out=);
+- Mux8Way16(a=, b=, c=, d=, e=, f=, g=, h=, sel=, out=);
+- DMux(in=, sel=, a=, b=);
+- DMux4Way(in=, sel=, a=, b=, c=, d=);
+- DMux8Way(in=, sel=, a=, b=, c=, d=, e=, f=, g=, h=);
 ** Chapter 2
-- HalfAdder(a= ,b= ,sum= , carry=);
-- FullAdder(a= ,b= ,c= ,sum= ,carry=);
-- Add16(a= ,b= ,out=);
-- Inc16(in= ,out=);
-- ALU(x= ,y= ,zx= ,nx= ,zy= ,ny= ,f= ,no= ,out= ,zr= ,ng=);
+- HalfAdder(a=, b=, sum=,  carry=);
+- FullAdder(a=, b=, c=, sum=, carry=);
+- Add16(a=, b=, out=);
+- Inc16(in=, out=);
+- ALU(x=, y=, zx=, nx=, zy=, ny=, f=, no=, out=, zr=, ng=);
+** Chapter 3
+- DFF(in=, out=);
+- Bit(in=, load=, out=);
+- Register(in=, load=, out=);
+- RAM8(in=, load=, address=, out=);
+- RAM64(in=, load=, address=, out=);
+- RAM512(in=, load=, address=, out=);
+- RAM4K(in=, load=, address=, out=);
+- RAM16K(in=, load=, address=, out=);
+- PC(in=, load=, inc=, reset=, out=);
 ** Upcoming
-- ARegister(in= ,load= ,out=);
-- Bit(in= ,load= ,out=);
-- CPU(inM= ,instruction= ,reset= ,outM= ,writeM= ,addressM= ,pc=);
-- DFF(in= ,out=);
-- DRegister(in= ,load= ,out=);
+- ARegister(in=, load=, out=);
+- CPU(inM=, instruction=, reset=, outM=, writeM=, addressM=, pc=);
+- DRegister(in=, load=, out=);
 - Keyboard(out=);
-- Memory(in= ,load= ,address= ,out=);
-- PC(in= ,load= ,inc= ,reset= ,out=);
-- RAM16K(in= ,load= ,address= ,out=);
-- RAM4K(in= ,load= ,address= ,out=);
-- RAM512(in= ,load= ,address= ,out=);
-- RAM64(in= ,load= ,address= ,out=);
-- RAM8(in= ,load= ,address= ,out=);
-- Register(in= ,load= ,out=);
-- ROM32K(address= ,out=);
-- Screen(in= ,load= ,address= ,out=);
+- Memory(in=, load=, address=, out=);
+- ROM32K(address=, out=);
+- Screen(in=, load=, address=, out=);
