--- a/notes.org
+++ b/notes.org
@@ -191,10 +191,58 @@ Control flow in assembly is done with jumps which are much like "gotos" in other
 *** Instructions
 A-Instruction: ~@value~ loads ~value~ into the A register
 C-Instruction: ~dest=comp;jump~; if ~dest~ or ~jump~ are emtpy, then ~=~ or ~;~ may be omitted, respectively
+**** Possible dest values:
+Any combination of the 3 capital letters: ~AMD~
+
+Order is important. ~A~ should always come first if present, and ~D~ should always come last if present.
+**** Possible comp values:
+1. 0
+2. 1
+3. -1
+4. D
+5. A
+6. !D
+7. !A
+8. -D
+9. -A
+10. D+1
+11. A+1
+12. D-1
+13. A-1
+14. D+A
+15. D-A
+16. A-D
+17. D&A
+18. D|A
+19. M
+20. !M
+21. -M
+22. M+1
+23. M-1
+24. D+M
+25. D-M
+26. M-D
+27. D&M
+28. D|M
+**** Possible jump values:
+JLT
+JLE
+JGT
+JGE
+JEQ
+JNE
+JMP
 *** Symbols
 - Predefined symbols: ~R0~ through ~R15~, ~SP~, ~LCL~, ~ARG~, ~THIS~, ~THAT~ (the latter symbols overlap with ~R0~ through ~R4~)
 - ~(Labels)~
 - Variables will be turned into static register addresses at compile time.
+*** Input / Output devices
+**** Screen
+The screen is 256 x 512 pixels, which is 8192 16-bit registers, and each row is 32 16-bit registers.
+
+The screen is controlled by a memory map starting at address 16384 (0x4000).
+**** Keyboard
+When a key is pressed, it's ASCII code appears at address 24576 (0x6000). The value is 0 if no keys are pressed.
 ** 4.3 - Perspective
 The assembly described in the book is simpler than most.
 * Appendix A (HDL) - Sections A1-A6
